qt/gen_qlistview.h

class QListView;
class QMetaObject;
class QModelIndex;
class QPoint;
class QRect;
class QSize;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QListView QListView;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWidget QWidget;
bool QListView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QListView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QListView_override_virtual_enterEvent(void* self, intptr_t slot);
void QListView_virtualbase_enterEvent(void* self, QEvent* event);
bool QListView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QListView_virtualbase_leaveEvent(void* self, QEvent* event);
bool QListView_override_virtual_moveEvent(void* self, intptr_t slot);
void QListView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QListView_override_virtual_closeEvent(void* self, intptr_t slot);
void QListView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QListView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QListView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QListView_override_virtual_actionEvent(void* self, intptr_t slot);
void QListView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QListView_override_virtual_showEvent(void* self, intptr_t slot);
void QListView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QListView_override_virtual_hideEvent(void* self, intptr_t slot);
void QListView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QListView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QListView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QListView_override_virtual_metric(void* self, intptr_t slot);
int QListView_virtualbase_metric(const void* self, int param1);
bool QListView_override_virtual_initPainter(void* self, intptr_t slot);
void QListView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QListView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QListView_virtualbase_redirected(const void* self, QPoint* offset);
bool QListView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QListView_virtualbase_sharedPainter(const void* self);
bool QListView_override_virtual_childEvent(void* self, intptr_t slot);
void QListView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QListView_override_virtual_customEvent(void* self, intptr_t slot);
void QListView_virtualbase_customEvent(void* self, QEvent* event);
bool QListView_override_virtual_connectNotify(void* self, intptr_t slot);
void QListView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QListView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QListView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QListView_staticMetaObject();
void QListView_delete(QListView* self);