qt/gen_qlistview.nim

proc fQListView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_keyReleaseEvent".}
proc fcQListView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_keyReleaseEvent".}
proc fQListView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_enterEvent".}
proc fcQListView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_enterEvent".}
proc fQListView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_leaveEvent".}
proc fcQListView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_leaveEvent".}
proc fQListView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_moveEvent".}
proc fcQListView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_moveEvent".}
proc fQListView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_closeEvent".}
proc fcQListView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_closeEvent".}
proc fQListView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_tabletEvent".}
proc fcQListView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_tabletEvent".}
proc fQListView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_actionEvent".}
proc fcQListView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_actionEvent".}
proc fQListView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_showEvent".}
proc fcQListView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_showEvent".}
proc fQListView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_hideEvent".}
proc fcQListView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_hideEvent".}
proc fQListView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QListView_virtualbase_nativeEvent".}
proc fcQListView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_nativeEvent".}
proc fQListView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QListView_virtualbase_metric".}
proc fcQListView_override_virtual_metric(self: pointer, slot: int) {.importc: "QListView_override_virtual_metric".}
proc fQListView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QListView_virtualbase_initPainter".}
proc fcQListView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QListView_override_virtual_initPainter".}
proc fQListView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QListView_virtualbase_redirected".}
proc fcQListView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QListView_override_virtual_redirected".}
proc fQListView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QListView_virtualbase_sharedPainter".}
proc fcQListView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QListView_override_virtual_sharedPainter".}
proc fQListView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_childEvent".}
proc fcQListView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_childEvent".}
proc fQListView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_customEvent".}
proc fcQListView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_customEvent".}
proc fQListView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QListView_virtualbase_connectNotify".}
proc fcQListView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QListView_override_virtual_connectNotify".}
proc fQListView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QListView_virtualbase_disconnectNotify".}
proc fcQListView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QListView_override_virtual_disconnectNotify".}
proc fcQListView_staticMetaObject(): pointer {.importc: "QListView_staticMetaObject".}
proc fcQListView_delete(self: pointer) {.importc: "QListView_delete".}


func init*(T: type QListView, h: ptr cQListView): QListView =
  T(h: h)
proc create*(T: type QListView, parent: gen_qwidget.QWidget): QListView =

  QListView.init(fcQListView_new(parent.h))
proc create*(T: type QListView, ): QListView =

  QListView.init(fcQListView_new2())
proc metaObject*(self: QListView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQListView_metaObject(self.h))

proc metacast*(self: QListView, param1: cstring): pointer =

  fcQListView_metacast(self.h, param1)

proc metacall*(self: QListView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQListView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QListView, s: cstring): string =

  let v_ms = fcQListView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QListView, s: cstring): string =

  let v_ms = fcQListView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setMovement*(self: QListView, movement: QListViewMovement): void =

  fcQListView_setMovement(self.h, cint(movement))

proc movement*(self: QListView, ): QListViewMovement =

  QListViewMovement(fcQListView_movement(self.h))

proc setFlow*(self: QListView, flow: QListViewFlow): void =

  fcQListView_setFlow(self.h, cint(flow))

proc flow*(self: QListView, ): QListViewFlow =

  QListViewFlow(fcQListView_flow(self.h))

proc setWrapping*(self: QListView, enable: bool): void =

  fcQListView_setWrapping(self.h, enable)

proc isWrapping*(self: QListView, ): bool =

  fcQListView_isWrapping(self.h)

proc setResizeMode*(self: QListView, mode: QListViewResizeMode): void =

  fcQListView_setResizeMode(self.h, cint(mode))

proc resizeMode*(self: QListView, ): QListViewResizeMode =

  QListViewResizeMode(fcQListView_resizeMode(self.h))

proc setLayoutMode*(self: QListView, mode: QListViewLayoutMode): void =

  fcQListView_setLayoutMode(self.h, cint(mode))

proc layoutMode*(self: QListView, ): QListViewLayoutMode =

  QListViewLayoutMode(fcQListView_layoutMode(self.h))

proc setSpacing*(self: QListView, space: cint): void =

  fcQListView_setSpacing(self.h, space)

proc spacing*(self: QListView, ): cint =

  fcQListView_spacing(self.h)

proc setBatchSize*(self: QListView, batchSize: cint): void =

  fcQListView_setBatchSize(self.h, batchSize)

proc batchSize*(self: QListView, ): cint =

  fcQListView_batchSize(self.h)

proc setGridSize*(self: QListView, size: gen_qsize.QSize): void =

  fcQListView_setGridSize(self.h, size.h)

proc gridSize*(self: QListView, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQListView_gridSize(self.h))

proc setViewMode*(self: QListView, mode: QListViewViewMode): void =

  fcQListView_setViewMode(self.h, cint(mode))

proc viewMode*(self: QListView, ): QListViewViewMode =

  QListViewViewMode(fcQListView_viewMode(self.h))

proc clearPropertyFlags*(self: QListView, ): void =

  fcQListView_clearPropertyFlags(self.h)

proc isRowHidden*(self: QListView, row: cint): bool =

  fcQListView_isRowHidden(self.h, row)

proc setRowHidden*(self: QListView, row: cint, hide: bool): void =

  fcQListView_setRowHidden(self.h, row, hide)

proc setModelColumn*(self: QListView, column: cint): void =

  fcQListView_setModelColumn(self.h, column)

proc modelColumn*(self: QListView, ): cint =

  fcQListView_modelColumn(self.h)

proc setUniformItemSizes*(self: QListView, enable: bool): void =

  fcQListView_setUniformItemSizes(self.h, enable)

proc uniformItemSizes*(self: QListView, ): bool =

  fcQListView_uniformItemSizes(self.h)

proc setWordWrap*(self: QListView, on: bool): void =

  fcQListView_setWordWrap(self.h, on)

proc wordWrap*(self: QListView, ): bool =

  fcQListView_wordWrap(self.h)

proc setSelectionRectVisible*(self: QListView, show: bool): void =

  fcQListView_setSelectionRectVisible(self.h, show)

proc isSelectionRectVisible*(self: QListView, ): bool =

  fcQListView_isSelectionRectVisible(self.h)

proc setItemAlignment*(self: QListView, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQListView_setItemAlignment(self.h, cint(alignment))

proc itemAlignment*(self: QListView, ): gen_qnamespace.AlignmentFlag =

  gen_qnamespace.AlignmentFlag(fcQListView_itemAlignment(self.h))

proc visualRect*(self: QListView, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQListView_visualRect(self.h, index.h))

proc scrollTo*(self: QListView, index: gen_qabstractitemmodel.QModelIndex, hint: gen_qabstractitemview.QAbstractItemViewScrollHint): void =

  fcQListView_scrollTo(self.h, index.h, cint(hint))

proc indexAt*(self: QListView, p: gen_qpoint.QPoint): gen_qabstractitemmodel.QModelIndex =

  gen_qabstractitemmodel.QModelIndex(h: fcQListView_indexAt(self.h, p.h))

proc doItemsLayout*(self: QListView, ): void =

  fcQListView_doItemsLayout(self.h)

proc reset*(self: QListView, ): void =

  fcQListView_reset(self.h)

proc setRootIndex*(self: QListView, index: gen_qabstractitemmodel.QModelIndex): void =

  fcQListView_setRootIndex(self.h, index.h)

proc indexesMoved*(self: QListView, indexes: seq[gen_qabstractitemmodel.QModelIndex]): void =

  var indexes_CArray = newSeq[pointer](len(indexes))
  for i in 0..<len(indexes):
    indexes_CArray[i] = indexes[i].h

  fcQListView_indexesMoved(self.h, struct_miqt_array(len: csize_t(len(indexes)), data: if len(indexes) == 0: nil else: addr(indexes_CArray[0])))

proc miqt_exec_callback_QListView_indexesMoved(slot: int, indexes: struct_miqt_array) {.exportc.} =
  type Cb = proc(indexes: seq[gen_qabstractitemmodel.QModelIndex])
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  var vindexes_ma = indexes
  var vindexesx_ret = newSeq[gen_qabstractitemmodel.QModelIndex](int(vindexes_ma.len))
  let vindexes_outCast = cast[ptr UncheckedArray[pointer]](vindexes_ma.data)
  for i in 0 ..< vindexes_ma.len:
    vindexesx_ret[i] = gen_qabstractitemmodel.QModelIndex(h: vindexes_outCast[i])
  let slotval1 = vindexesx_ret


  nimfunc[](slotval1)

proc onindexesMoved*(self: QListView, slot: proc(indexes: seq[gen_qabstractitemmodel.QModelIndex])) =
  type Cb = proc(indexes: seq[gen_qabstractitemmodel.QModelIndex])
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQListView_connect_indexesMoved(self.h, cast[int](addr tmp[]))
proc tr2*(_: type QListView, s: cstring, c: cstring): string =

  let v_ms = fcQListView_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QListView, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQListView_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QListView, s: cstring, c: cstring): string =

  let v_ms = fcQListView_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QListView, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQListView_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
